--- a/helm/panda/charts/postgres/templates/deployment.yaml
+++ b/helm/panda/charts/postgres/templates/deployment.yaml
@@ -53,7 +53,11 @@ spec:
       labels:
         {{- include "postgres.selectorLabels" . | nindent 8 }}
     spec:
+      {{- if .Values.database.panda_dbhost }}
+      hostname {{ .Values.database.panda_dbhost }}
+      {{- else }}
       hostname: panda-database
+      {{ end }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
