--- a/helm/panda/charts/server/templates/configmap.yaml
+++ b/helm/panda/charts/server/templates/configmap.yaml
@@ -7,7 +7,7 @@ data:
   panda_server_configmap.json: |-
 {{ .Files.Get "panda_server_configmap.json" | indent 4}}
 
-{{- if .Values.hostcerts.enabled -}}
+{{- if .Values.hostcerts.enabled }}
 ---
 # host cert and key
 apiVersion: v1
