--- a/helm/panda/charts/server/templates/deployment.yaml
+++ b/helm/panda/charts/server/templates/deployment.yaml
@@ -124,4 +124,4 @@ spec:
         - name: {{ include "server.fullname" . }}-certs
           configMap:
               name: {{ include "server.fullname" . }}-certs
-        {{- end }}
+        {{ end }}
