--- a/helm/panda/charts/jedi/panda_jedi_configmap.json
+++ b/helm/panda/charts/jedi/panda_jedi_configmap.json
@@ -1,5 +1,9 @@
 {
     "db": {
-        "backend": "postgres" 
+        "backend": "postgres"
+    }, 
+    "master": {
+        "gname": "", 
+        "uname": ""
     }
 }
