--- a/helm/panda/charts/server/values.yaml
+++ b/helm/panda/charts/server/values.yaml
@@ -30,6 +30,8 @@ database:
   # Specify name of database configmap if different from server configmap
   # password_ref: panda-postgres-configmap
 
+initContainer: true
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
