--- a/helm/panda/charts/jedi/templates/configmap.yaml
+++ b/helm/panda/charts/jedi/templates/configmap.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "jedi.fullname" . }}-configmap
+  name: {{ include "jedi.fullname" . }}-configjson
 data:
   panda_jedi_configmap.json: |-
 {{ .Files.Get "panda_jedi_configmap.json" | indent 4}}
