--- a/helm/panda/charts/jedi/templates/deployment.yaml
+++ b/helm/panda/charts/jedi/templates/deployment.yaml
@@ -77,13 +77,13 @@ spec:
           volumeMounts:
               - name: {{ include "jedi.fullname" . }}-logs
                 mountPath: /var/log/panda
-              - name: {{ include "jedi.fullname" . }}-configmap
+              - name: {{ include "jedi.fullname" . }}-configjson
                 mountPath: /opt/panda/etc/configmap
           {{- if .Values.database.password_get }}
           envFrom:
             - configMapRef:
-                {{- if .Values.database.password_ref }}
-                name: {{ .Values.database.password_ref }}
+                {{- if .Values.database.config_ref }}
+                name: {{ .Values.database.config_ref }}
                 {{- else }}
                 name: {{ .Release.Name }}-postgres-configmap
                 {{- end }}
@@ -104,14 +104,14 @@ spec:
         - name: {{ include "jedi.fullname" . }}-logs
           persistentVolumeClaim:
             claimName: {{ include "jedi.fullname" . }}
-        - name: {{ include "jedi.fullname" . }}-configmap
+        - name: {{ include "jedi.fullname" . }}-configjson
           projected:
             sources:
               - configMap:
-                  name: {{ include "jedi.fullname" . }}-configmap
+                  name: {{ include "jedi.fullname" . }}-configjson
               - configMap:
-                  {{- if .Values.server_ref }}
-                  name: {{ .Values.database.server_ref }}
+                  {{- if .Values.server.config_ref }}
+                  name: {{ .Values.server.config_ref }}
                   {{- else }}
-                  name: {{ .Release.Name }}-server-configmap
+                  name: {{ .Release.Name }}-server-configjson
                   {{- end }}
