--- a/helm/panda/charts/server/templates/deployment.yaml
+++ b/helm/panda/charts/server/templates/deployment.yaml
@@ -87,7 +87,7 @@ spec:
           volumeMounts:
              - name: {{ include "server.fullname" . }}-logs
                mountPath: /var/log/panda
-             - name: {{ include "server.fullname" . }}-configmap
+             - name: {{ include "server.fullname" . }}-configjson
                mountPath: /opt/panda/etc/configmap
              {{- if .Values.hostcerts.enabled }}
              - name: {{ include "server.fullname" . }}-certs
@@ -95,8 +95,8 @@ spec:
              {{- end }}
           envFrom:
              - configMapRef:
-                {{- if .Values.database.password_ref }}
-                name: {{ .Values.database.password_ref }}
+                {{- if .Values.database.config_ref }}
+                name: {{ .Values.database.config_ref }}
                 {{- else }}
                 name: {{ .Release.Name }}-postgres-configmap
                 {{- end }}
@@ -116,9 +116,9 @@ spec:
         - name: {{ include "server.fullname" . }}-logs
           persistentVolumeClaim:
             claimName: {{ include "server.fullname" . }}
-        - name: {{ include "server.fullname" . }}-configmap
+        - name: {{ include "server.fullname" . }}-configjson
           configMap:
-              name: {{ include "server.fullname" . }}-configmap
+              name: {{ include "server.fullname" . }}-configjson
         {{- if .Values.hostcerts.enabled }}
         - name: {{ include "server.fullname" . }}-certs
           configMap:
