--- a/helm/panda/charts/server/templates/route.yaml
+++ b/helm/panda/charts/server/templates/route.yaml
@@ -7,13 +7,13 @@ metadata:
       {{- include "server.labels" . | nindent 4 }}
 
 spec:
-  host: {{ .Values.route.host}}
+  host: {{ .Values.route.hostName}}
   to:
     kind: Service
     name: {{ include "server.fullname" . }}
   port:
     targetPort: {{ .Values.service.httpsPort }}
-  {{- if .Values.route.tls }}
+  {{- with .Values.route.tls }}
   tls:
     {{- toYaml . | nindent 4 }}
   {{- end }}
