--- a/helm/panda/charts/jedi/templates/deployment.yaml
+++ b/helm/panda/charts/jedi/templates/deployment.yaml
@@ -79,15 +79,17 @@ spec:
                 mountPath: /var/log/panda
               - name: {{ include "jedi.fullname" . }}-configjson
                 mountPath: /opt/panda/etc/configmap
-          {{- if .Values.database.password_get }}
           envFrom:
+            - configMapRef:
+                name: {{ .Release.Name }}-server-configmap
+            {{- if .Values.database.password_get }}
             - configMapRef:
                 {{- if .Values.database.config_ref }}
                 name: {{ .Values.database.config_ref }}
                 {{- else }}
                 name: {{ .Release.Name }}-postgres-configmap
                 {{- end }}
-          {{- end }}
+            {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
