--- a/helm/panda/charts/postgres/templates/configmap.yaml
+++ b/helm/panda/charts/postgres/templates/configmap.yaml
@@ -6,9 +6,9 @@ metadata:
   labels:
     {{- include "postgres.labels" . | nindent 4 }}
 data:
-  PANDA_PASSWORD: {{ .Values.database.password }}
+  PANDA_DB_PASSWORD: {{ .Values.database.password }}
   {{- if .Values.database.panda_dbhost }}
-  PANDA_DBHOST: {{ .Values.database.dbhost }}
+  PANDA_DB_HOST: {{ .Values.database.dbhost }}
   {{- else }}
-  PANDA_DBHOST: {{ include "postgres.fullname" . }}
+  PANDA_DB_HOST: {{ include "postgres.fullname" . }}
   {{- end }}
