--- a/helm/panda/charts/server/templates/deployment.yaml
+++ b/helm/panda/charts/server/templates/deployment.yaml
@@ -102,6 +102,9 @@ spec:
                  {{- end }}
              - configMapRef:
                  name: {{ include "server.fullname" . }}-configmap
+          env:
+            - name: PANDA_SERVER_CONF_SERVERNAME
+              value: {{ include "server.fullname" . }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
