--- a/helm/panda/charts/server/templates/configmap.yaml
+++ b/helm/panda/charts/server/templates/configmap.yaml
@@ -1,4 +1,4 @@
-# server configuration
+# server configuration json
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -32,5 +32,5 @@ metadata:
 data:
   PANDA_SERVER_HOST: {{ include "server.fullname" . }}
   PANDA_SERVER_PORT: {{ .Values.service.httpsPort }}
-  PANDA_URL: https://{{ include "server.fullname" . }}:{{ .Values.service.httpsPort }}/server/panda
-  PANDA_URL_SSL: https://{{ include "server.fullname" . }}:{{ .Values.service.httpsPort }}/server/panda
+  PANDA_URL: print "https://%s:%d/server/panda{{ include "server.fullname" .}}:{{ .Values.service.httpsPort }}/server/panda"
+  PANDA_URL_SSL: print "https://%s:%d/server/panda{{ include "server.fullname" .}}:{{ .Values.service.httpsPort }}/server/panda"
