--- a/helm/panda/charts/server/templates/configmap.yaml
+++ b/helm/panda/charts/server/templates/configmap.yaml
@@ -32,16 +32,17 @@ data:
   PANDA_URL: "https://{{ include "server.fullname" .}}:{{ .Values.service.httpsPort }}/server/panda"
   PANDA_URL_SSL: "https://{{ include "server.fullname" .}}:{{ .Values.service.httpsPort }}/server/panda"
 
-{{- $authconfig := .Files.Glob "auth/**.auth_config.json" }}
+{{ $authconfig := .Files.Glob "auth/**_auth_config.json" }}
 {{- if $authconfig }}
-----
-# auth config
+---
+# auth
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "server.fullname" . }}-authconfig
+  name: {{ include "server.fullname" . }}-auth
 data:
-  {{ range $path, $_ :=  $authconfig }}
-    {{ $.Files.Get $path } indent 4 }}
-  {{ end }}
-{{- end }}
+  {{- range $path, $_ :=  $authconfig }}
+  {{ base $path }}: |-
+    {{ $.Files.Get $path }}
+  {{- end }}
+{{ end }}
