--- a/helm/panda/charts/server/templates/deployment.yaml
+++ b/helm/panda/charts/server/templates/deployment.yaml
@@ -89,6 +89,8 @@ spec:
                mountPath: /var/log/panda
              - name: {{ include "server.fullname" . }}-configjson
                mountPath: /opt/panda/etc/configmap
+             - name: { { include "server.fullname" . } }-auth
+               mountPath: /opt/panda/etc/panda/auth
              {{- if .Values.hostcerts.enabled }}
              - name: {{ include "server.fullname" . }}-certs
                mountPath: /opt/panda/etc/cert
@@ -124,6 +126,9 @@ spec:
         - name: {{ include "server.fullname" . }}-configjson
           configMap:
               name: {{ include "server.fullname" . }}-configjson
+        - name: { { include "server.fullname" . } }-auth
+          configMap:
+              name: { { include "server.fullname" . } }-auth
         {{- if .Values.hostcerts.enabled }}
         - name: {{ include "server.fullname" . }}-certs
           configMap:
