--- a/helm/panda/charts/server/templates/configmap.yaml
+++ b/helm/panda/charts/server/templates/configmap.yaml
@@ -34,8 +34,8 @@ data:
   {{- if .Values.authIdToken }}
   PANDA_VERIFY_HOST: "off"
   PANDA_AUTH: "oidc"
-  PANDA_AUTH_ID_TOKEN: {{ Values.authIdToken }}
-  PANDA_AUTH_VO: {{ Values.authVO }}
+  PANDA_AUTH_ID_TOKEN: {{ .Values.authIdToken }}
+  PANDA_AUTH_VO: {{ .Values.authVO }}
   {{- end }}
 
 ---
