--- a/helm/panda/charts/server/templates/configmap.yaml
+++ b/helm/panda/charts/server/templates/configmap.yaml
@@ -38,14 +38,14 @@ data:
   PANDA_AUTH_VO: {{ .Values.authVO }}
   {{- end }}
   {{- if .Values.httpProxy }}
-  http_proxy: {{ .Values.httpProxy }}
-  no_proxy: localhost,{{ include "server.fullname" . }}
+  http_proxy: "{{ .Values.httpProxy }}"
+  no_proxy: "localhost,{{ include "server.fullname" . }}"
   {{- if .Values.httpsProxy }}
-  https_proxy: {{ .Values.httpProxy }}
+  https_proxy: "{{ .Values.httpProxy }}"
   {{- end }}
   {{- else if .Values.httpsProxy }}
-  https_proxy: {{ .Values.httpsProxy }}
-  no_proxy: localhost,{{ include "server.fullname" . }}
+  https_proxy: "{{ .Values.httpsProxy }}"
+  no_proxy: "localhost,{{ include "server.fullname" . }}"
   {{- end }}
 
 ---
