--- a/helm/panda/charts/server/templates/configmap.yaml
+++ b/helm/panda/charts/server/templates/configmap.yaml
@@ -47,6 +47,9 @@ data:
   https_proxy: "{{ .Values.httpsProxy }}"
   no_proxy: "localhost,{{ include "server.fullname" . }}"
   {{- end }}
+  {{- if .Values.noRoot }}
+  PANDA_NO_ROOT: "1"
+  {{- end }}
 
 ---
 # auth
