--- a/helm/panda/charts/server/values.yaml
+++ b/helm/panda/charts/server/values.yaml
@@ -20,6 +20,9 @@ authVO: ""
 httpProxy: ""
 httpsProxy: ""
 
+# run with non-root PID
+noRoot: false
+
 persistentvolume:
   # Set true to create PV
   create: false
