--- a/helm/panda/values.yaml
+++ b/helm/panda/values.yaml
@@ -2,118 +2,39 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-# panda_db, panda_user and panda_schema should not be changed currently
-database:
-  panda_db: &panda_db "panda_db"
-  panda_user: &panda_user "panda"
-  panda_password: &panda_password "MyPass123"
-  panda_schema: &panda_schema "doma_panda"
-
 jedi:
+  # enable JEDI
   enabled: true
-  replicaCount: 1
+  # container image and tag
   image:
-    repository: ghcr.io/pandawms/panda-jedi
-    pullPolicy: Always
-    # Overrides the image tag whose default is the chart appVersion.
-    tag: "latest"
-  autoStart: true
+    tag: latest
 
-  persistentvolume:
-    path: "/mnt/panda-jedi-logs"
-    size: 5Gi
-  hostcerts:
-    enabled: false
-  database:
-    panda_db: *panda_db
-    panda_user: *panda_user
-    panda_password: *panda_password
-    panda_schema: *panda_schema
-  service:
-    type: ClusterIP
-    httpPort: 25080
-    httpsPort: 25443
-  ingress:
-    enabled: true
-    hosts:
-      - domain: cern.ch
-        # hostOverride: panda-k8s-dev-jedi.cern.ch
-        paths:
-          - path: /
-            pathType: Prefix
-    tls:
-      - secretName: ""
-        hosts:
-          - domain: cern.ch
-            # hostOverride: panda-k8s-dev-jedi.cern.ch
 server:
+  # enable the PanDA server
   enabled: true
-  replicaCount: 1
+  # container image and tag
   image:
-    repository: ghcr.io/pandawms/panda-server
-    pullPolicy: Always
-    # Overrides the image tag whose default is the chart appVersion.
-    tag: "latest"
-  autoStart: true
-
-  persistentvolume:
-    path: "/mnt/panda-server-logs"
-    size: 5Gi
+    tag: latest
+  # copy host certs from local
   hostcerts:
-    enabled: false
-  database:
-    panda_db: *panda_db
-    panda_user: *panda_user
-    panda_password: *panda_password
-    panda_schema: *panda_schema
-  service:
-    type: ClusterIP
-    httpPort: 25080
-    httpsPort: 25443
-  ingress:
     enabled: true
-    hosts:
-      - domain: cern.ch
-        # hostOverride: panda-k8s-dev-server.cern.ch
-        paths:
-          - path: /
-            pathType: Prefix
-    tls:
-      - secretName: ""
-        hosts:
-          - domain: cern.ch
-            # hostOverride: panda-k8s-dev-server.cern.ch
-postgres:
-  # nameOverride: {{ .Release.Name }}-postgres
-  # fullnameOverride: {{ .Release.Name }}-postgres
-  enabled: true
-  persistentvolume:
-    path: "/mnt/panda-database"
-    size: 5Gi
-  image:
-    repository: wguanicedew/panda-centos7-postgresql
-    pullPolicy: IfNotPresent
-    tag: "0.1.0"
+  # use Route class for ingress
+  route:
+    enabled: true
+    # host name of the PanDA server
+    hostName: sphenix-pandaserver.apps.rcf.bnl.gov
+  # ID token of the PanDA service account
+  authIdToken: "..."
+  # VO (+ role)
+  authVO: "panda_dev.production"
+  # https proxy if containers need it to access external services
+  #httpsProxy: "..."
+  # run containers with no-root PID
+  #noRoot: true
 
-  database:
-    name: postgresdb
-    user: admin
-    password: MyPandaPass0508
-    schema: default
-    panda_db: *panda_db
-    panda_user: *panda_user
-    panda_password: *panda_password
-    panda_schema: *panda_schema
-  ingress:
-    enabled: true
-    hosts:
-      - domain: cern.ch
-        # hostOverride: panda-k8s-dev-postgres.cern.ch
-        paths:
-          - path: /
-            pathType: Prefix
-    tls:
-      - secretName: ""
-        hosts:
-          - domain: cern.ch
-            # hostOverride: panda-k8s-dev-postgres.cern.ch
+postgres:
+  # enable the database
+  enabled: true
+  # container image and tag
+  image:
+    tag: latest
