--- a/helm/panda/charts/server/panda_server_configmap.json
+++ b/helm/panda/charts/server/panda_server_configmap.json
@@ -11,5 +11,8 @@
         "pserveralias": "FIXME: a common name of httpd",
         "setupper_plugins": "wlcg:dataservice.SetupperDummyPlugin:SetupperDummyPlugin", 
         "token_authType": "oidc"
+    },
+    "daemon": {
+        "enable": "True"
     }
 }
