selector for pvc

--- a/helm/panda/charts/jedi/templates/deployment.yaml
+++ b/helm/panda/charts/jedi/templates/deployment.yaml
@@ -30,6 +30,9 @@ spec:
   resources:
     requests:
       storage: {{ .Values.persistentvolume.size }}
+  selector:
+    matchLabels:
+      {{- include "jedi.selectorLabels" . | nindent 6 }}
 ---
 apiVersion: apps/v1
 kind: Deployment
