--- a/helm/panda/charts/postgres/templates/configmap.yaml
+++ b/helm/panda/charts/postgres/templates/configmap.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "postgres.labels" . | nindent 4 }}
 data:
   PANDA_DB_PASSWORD: {{ .Values.database.password }}
-  {{- if .Values.database.panda_dbhost }}
+  {{- if .Values.database.dbhost }}
   PANDA_DB_HOST: {{ .Values.database.dbhost }}
   {{- else }}
   PANDA_DB_HOST: {{ include "postgres.fullname" . }}
