--- a/helm/panda/charts/jedi/values.yaml
+++ b/helm/panda/charts/jedi/values.yaml
@@ -17,6 +17,7 @@ persistentvolume:
   class: nas
   path: "/mnt/panda-jedi-logs"
   size: 5Gi
+  selector: true
 
 database:
   # Set true to get database password via database configmap
